# tpserver-cpp

./: .boring  .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build-for-windows  configure.ac  configure.in  devserver.xml  quickstart-minisec.conf  quickstart-mtsec.conf  quickstart-mtsec.conf.in  quickstart-rfts.conf  quickstart-risk-bid.conf  quickstart-risk-bid.conf.in  quickstart-risk-random.conf  quickstart-risk-random.conf.in  quickstart-risk.conf  quickstart-tae.conf  sample.conf  tpserv.1  tpserver-cpp-inplace.xml  tpserver-cpp.1  tpserver-cpp.xml.in
debian/: README.Debian  changelog  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  tpserver-cpp-core-default  tpserver-cpp-core.conffiles  tpserver-cpp-core.dirs  tpserver-cpp-core.install  tpserver-cpp-default.ex  tpserver-cpp-dev.install  watch.ex  (+8 more)
modules/games/minisec/: Makefile.am  build.cpp  build.h  colonise.cpp  colonise.h  combatant.cpp  combatant.h  emptyobject.cpp  emptyobject.h  fleet.cpp  fleet.h  intercept.cpp  intercept.h  mergefleet.cpp  mergefleet.h  minisec.cpp  minisec.h  minisecturn.cpp  minisecturn.h  move.cpp  move.h  mysqlemptyobject.cpp  mysqlfleet.cpp  mysqlorderbuild.cpp  mysqlordercolonise.cpp  mysqlordermergefleet.cpp  mysqlordermove.cpp  mysqlordersplitfleet.cpp  mysqlordersplitfleet.h  mysqlplanet.cpp  nop.cpp  nop.h  ownedobject.cpp  ownedobject.h  planet.cpp  planet.h  rspcombat.cpp  rspcombat.h  sample.conf  spaceobject.cpp  (+6 more)
modules/games/mtsec/: Makefile.am  avacombat.cpp  avacombat.h  build.cpp  build.h  buildfleet.cpp  buildfleet.h  buildweapon.cpp  buildweapon.h  colonise.cpp  colonise.h  components.xml  compsimport.cpp  compsimport.h  dummyfleet.cpp  dummyfleet.h  emptyobject.cpp  emptyobject.h  enhance.cpp  enhance.h  fleet.cpp  fleet.h  loadarm.cpp  loadarm.h  mergefleet.cpp  mergefleet.h  move.cpp  move.h  mtsec.cpp  mtsec.h  mtsecturn.cpp  mtsecturn.h  mysqlemptyobject.h  mysqlfleet.cpp  mysqlfleet.h  mysqlorderbuild.cpp  mysqlorderbuild.h  mysqlordercolonise.cpp  mysqlordercolonise.h  mysqlordermergefleet.cpp  (+26 more)
modules/games/rfts/: Makefile.am  bombard.cpp  bombard.h  buildfleet.cpp  buildfleet.h  colonise.cpp  colonise.h  containertypes.h  designcategories.h  emptyobject.cpp  emptyobject.h  fleet.cpp  fleet.h  map.cpp  map.h  mergefleet.cpp  mergefleet.h  move.cpp  move.h  nop.cpp  nop.h  ownedobject.cpp  ownedobject.h  planet.cpp  planet.h  playerinfo.cpp  playerinfo.h  productioninfo.cpp  productioninfo.h  productionorder.cpp  productionorder.h  renamefleet.cpp  renamefleet.h  resourcelistparam.cpp  resourcelistparam.h  rfts.cpp  rfts.h  rftsturn.cpp  rftsturn.h  splitfleet.cpp  (+6 more)
modules/games/risk/: Makefile.am  TODO  bugs.txt  colonize.cpp  colonize.h  constellation.cpp  constellation.h  constellations.txt  containertypes.h  galaxy.cpp  galaxy.h  graph.cpp  graph.h  map.cpp  map.h  mapimport.cpp  mapimport.h  move.cpp  move.h  ownedobject.cpp  ownedobject.h  planet.cpp  planet.h  reinforce.cpp  reinforce.h  resourcelistparam.cpp  resourcelistparam.h  risk.cpp  risk.h  riskturn.cpp  riskturn.h  sample.conf  sc-maps.txt  sc-risk-adv.txt  sc-risk-basic.txt  settings  staticobject.cpp  staticobject.h  testing-risk.conf  things to include  (+7 more)
modules/games/risk/ticpp/: Makefile.am
modules/games/tae/: Makefile.am  Makefile.in  attack.cpp  attack.h  colonize.cpp  colonize.h  emptyobject.cpp  emptyobject.h  fleet.cpp  fleet.h  fleetbuilder.cpp  fleetbuilder.h  fleetorder.cpp  fleetorder.h  move.cpp  move.h  ownedobject.cpp  ownedobject.h  planet.cpp  planet.h  reinforce.cpp  reinforce.h  spaceobject.cpp  spaceobject.h  starsystem.cpp  starsystem.h  tae.cpp  tae.h  taeturn.cpp  taeturn.h  tpserver-cpp-tae.xml  universe.cpp  universe.h
modules/persistence/mysql/: Makefile.am  mysqlemptyobject.h  mysqlfleet.cpp  mysqlfleet.h  mysqlobjecttype.cpp  mysqlobjecttype.h  mysqlorderbuild.cpp  mysqlordercolonise.cpp  mysqlordercolonise.h  mysqlordermergefleet.cpp  mysqlordermergefleet.h  mysqlordermove.cpp  mysqlordermove.h  mysqlordernop.cpp  mysqlordernop.h  mysqlordersplitfleet.cpp  mysqlordersplitfleet.h  mysqlordertype.cpp  mysqlordertype.h  mysqlpersistence.cpp  mysqlpersistence.h  mysqlplanet.cpp  mysqlplanet.h  mysqluniverse.cpp  sample.conf
modules/ticpp/: Makefile.am
modules/tpcl/guile/: Makefile.am  guile.scm  tpguile.cpp  tpguile.h
modules/tpcl/mzscheme/: Makefile.am  designstruct.scm  tpmzscheme.cpp  tpmzscheme.h
src/: Makefile  Makefile.am  board.cpp  board.h  boardmanager.cpp  boardmanager.h  build.cpp  build.h  category.cpp  category.h  colonise.cpp  colonise.h  combatstrategy.cpp  combatstrategy.h  component.cpp  component.h  componentstruct.scm  connection.cpp  connection.h  console.cpp  console.h  consolelogger.h  datachunk.cpp  datachunk.h  datastore.cpp  datastore.h  design.cpp  design.h  designstore.cpp  designstore.h  designstruct.scm  emptyobject.cpp  emptyobject.h  filelogger.cpp  filelogger.h  fleet.cpp  fleet.h  frame.cpp  frame.h  game.cpp  (+102 more)
src/test/: guile_test.cpp  test.conf
tpserver/: Makefile.am  adminconnection.cpp  adminconnection.h  adminlogger.cpp  adminlogger.h  admintcpconn.cpp  admintcpconn.h  admintcpsocket.cpp  admintcpsocket.h  advertiser.cpp  advertiser.h  algorithms.h  asyncframe.h  asynclogmessage.cpp  asynclogmessage.h  asynctimeremaining.cpp  asynctimeremaining.h  avahi.cpp  avahi.h  basicturntimer.cpp  basicturntimer.h  board.cpp  board.h  boardmanager.cpp  boardmanager.h  category.cpp  category.h  combatstrategy.cpp  combatstrategy.h  command.cpp  command.h  commandmanager.cpp  commandmanager.h  common.h  component.cpp  component.h  componentview.cpp  componentview.h  connection.cpp  connection.h  (+188 more)
tpserver/battlexml/: battleexceptions.cpp  battleexceptions.h  battlelogger.cpp  battlelogger.h  combatant.cpp  combatant.h
tpserver/rulesetsupport/: nameselector.cpp  nameselector.h
tpserver/tinyxml/: tinyxml.h
(+14 files in other folders)
