AC_INIT(src/game.cpp)

AM_INIT_AUTOMAKE(tpserv, 0.0.1)
AM_CONFIG_HEADER(config.h)

CXXFLAGS=

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_LANG_CPLUSPLUS

AC_CHECK_LIB(pthread, pthread_create,,AC_MSG_ERROR(TP Server requires pthread library))
#check headers, functions, etc


AC_OUTPUT([
Makefile
src/Makefile
]) 
