## Process this file with automake to produce Makefile.in

rulesetlib_LTLIBRARIES = libticpp.la

rulesetlibdir = $(libdir)/tpserver/ticpp
#All .cpp's
libticpp_la_SOURCES = ticpp.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp

libticpp_la_LDFLAGS = -module

#All the .h's
noinst_HEADERS = ticpp.h ticpprc.h tinystr.h tinyxml.h
